# osinfo

./: CMakeLists.txt  configure
include/: osinfo
src/: main.cpp  osinfo.cpp
